--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "rules": {
       "@typescript-eslint/explicit-function-return-type": "off",
       "@typescript-eslint/no-unused-vars": "off",
+      "react/react-in-jsx-scope": "off",
       "react/jsx-filename-extension": [
         "warn",
         {
